# pq-auth-server

./: CMakeLists.txt  Dockerfile  README.md  WARP.md
as/: as.hpp  as_server.cpp
audit/: audit_logger.cpp  audit_logger.hpp
cmd/pq-authd/: main.cpp
crypto/: algorithms.hpp  classical_providers.cpp  factories.hpp  hkdf_sha3.cpp  hkdf_sha3.hpp  hybrid_suite.cpp  hybrid_suite.hpp  interfaces.hpp  pq_providers.cpp  ticket_protection.cpp  ticket_protection.hpp
docs/: post_quantum_authentication_service_pq_auth_system_requirements_document_v_1.md  post_quantum_password_manager_system_requirements_document_srd.md  pq_vault_pitch_deck.md  pqc_ssh_system_requirements_document_srd_v_1.md
gss/: mech_pqauth.c
policy/: config.cpp  config.hpp
scripts/: build_package.sh
tgs/: tgs.hpp  tgs_server.cpp
